@@ -22,7 +22,7 @@ PQXX_HAVE_LONG_DOUBLE	public	compiler
 PQXX_HAVE_NAN	internal	compiler
 PQXX_HAVE_C_NAN	internal	compiler
 PQXX_HAVE_GCC_VISIBILITY	internal	compiler
-PQXX_HAVE_QUIET_NAN	internal	compiler
+PQXX_HAVE_POLL	internal	compiler
 PQXX_HAVE_PQESCAPEBYTEA	internal	libpq
 PQXX_HAVE_PQESCAPEBYTEACONN	internal	libpq
 PQXX_HAVE_PQESCAPESTRING	internal	libpq
@@ -36,6 +36,7 @@ PQXX_HAVE_PQFTABLE	internal	libpq
 PQXX_HAVE_PQPUTCOPY	internal	libpq
 PQXX_HAVE_PQRESULTERRORFIELD	internal	libpq
 PQXX_HAVE_PQUNESCAPEBYTEA	internal	libpq
+PQXX_HAVE_QUIET_NAN	internal	compiler
 PQXX_HAVE_REVERSE_ITERATOR	public	compiler
 PQXX_HAVE_SLEEP	internal	compiler
 PQXX_HAVE_STREAMBUF	public	compiler
