@@ -1,3 +1,6 @@
+2006-08-04  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ configure.ac.in, configitems, src/connection_base.hxx:
+  - Use GNU/Linux poll() instead of select(), if available
 2006-07-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
  pqxx-config.in:
   - Is deprecated, and now says so (thanks Roger Leigh)
